--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  #firebase
   firebase_core: ^0.4.0+1
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+4
   firebase_storage: ^3.0.6
+  #others
+  image_picker: ^0.6.1+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
